<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/article_list_navigation_item_hide"
        android:icon="@drawable/ic_replay_24px__1_"
        android:title="@string/article_list_navigation_item_refresh"
        android:enabled="false"
        android:visible="false"
        android:checkable="false"/>
    <item
        android:id="@+id/article_list_navigation_item_refresh"
        android:icon="@drawable/ic_replay_24px__1_"
        android:title="@string/article_list_navigation_item_refresh"
        android:enabled="true"
        android:checkable="false"/>

    <item
        android:id="@+id/article_list_navigation_item_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/article_list_navigation_item_search"
        android:enabled="true"
        android:checkable="false"/>
    <item
        android:id="@+id/article_list_navigation_item_post"
        android:icon="@drawable/ic_edit_24px"
        android:title="@string/article_list_navigation_item_post"
        android:enabled="true"
        android:checkable="false"/>
    <item
        android:id="@+id/article_list_navigation_item_info"
        android:icon="@drawable/ic_more_24"
        android:title="@string/article_list_navigation_item_info"
        android:enabled="true"
        android:checkable="false"/>

</menu>