<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:foreground="?android:attr/selectableItemBackground"
    android:paddingBottom="8sp"
    android:paddingTop="8sp"
    android:paddingRight="20sp"
    android:paddingLeft="20sp"
    android:baselineAligned="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView_hot_boards_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5sp"
            android:text="@string/board_list_title_default"
            android:textColor="?attr/paleGrey"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView_hot_boards_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/board_list_subtitle_default"
            android:textColor="?attr/blueGrey"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:gravity="right|center_vertical"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/hot_boards_online_imageButton_person"
            android:layout_width="14sp"
            android:layout_height="14sp"
            android:adjustViewBounds="true"
            android:background="@drawable/botton_background"
            android:clickable="false"
            android:scaleType="centerInside"

            app:srcCompat="@drawable/ic_component_10_2" />
        <Space
            android:layout_width="5sp"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/textView_hot_boards_online"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/board_list_online_default"
            android:textSize="14sp" />
    </LinearLayout>
</LinearLayout>