<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/article_list_item_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/darkGreyTwo"
    android:baselineAligned="false"
    android:foreground="?android:attr/selectableItemBackground"
    android:orientation="vertical"
    android:paddingLeft="20sp"
    android:paddingTop="10sp"
    android:paddingRight="20sp"
    android:paddingBottom="10sp"
    tools:ignore="UnusedAttribute">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/article_list_imageButton_class"
            android:layout_width="20sp"
            android:layout_height="20sp"
            android:adjustViewBounds="true"
            android:background="@drawable/botton_background"
            android:clickable="false"
            android:contentDescription="@string/article_list_imageButton_class"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/rectangle" />

        <Space
            android:layout_width="5sp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/article_list_item_textView_class"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10sp"
            android:contentDescription="@string/todo"
            android:text="新聞"
            android:textColor="?attr/blueGrey" />

        <ImageButton
            android:id="@+id/article_list_imageButton_date"
            android:layout_width="20sp"
            android:layout_height="20sp"
            android:adjustViewBounds="true"
            android:background="@drawable/botton_background"
            android:clickable="false"
            android:contentDescription="@string/article_list_imageButton_date"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/clock" />

        <Space
            android:layout_width="5sp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/article_list_item_textView_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10sp"
            android:contentDescription="@string/todo"
            android:text="02-02"
            android:textColor="?attr/blueGrey" />

        <ImageButton
            android:id="@+id/hot_boards_online_imageButton_person"
            android:layout_width="20sp"
            android:layout_height="20sp"
            android:adjustViewBounds="true"
            android:background="@drawable/botton_background"
            android:clickable="false"
            android:contentDescription="@string/hot_boards_online_imageButton_person"
            android:padding="2sp"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/component_10_3" />

        <Space
            android:layout_width="5sp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/article_list_item_textView_auth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/todo"
            android:text="hu7592"
            android:textColor="?attr/blueGrey" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        android:layout_marginBottom="5sp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/article_list_item_textView_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/todo"
            android:lineSpacingExtra="22sp"
            android:lineSpacingMultiplier="0"
            android:text="Re：香港校園變戰場 台灣學生發起「一方有難八方支援」連署"
            android:textColor="?attr/paleGrey"
            android:textSize="17sp" />

        <ImageButton
            android:id="@+id/article_list_item_imageButton_more"
            android:layout_width="30sp"
            android:layout_height="30sp"
            android:adjustViewBounds="true"
            android:background="?selectableItemBackgroundBorderless"
            android:contentDescription="@string/more_button"
            android:padding="5sp"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/more" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/article_list_item_imageButton_like"
            android:layout_width="20sp"
            android:layout_height="20sp"
            android:adjustViewBounds="true"
            android:background="@drawable/botton_background"
            android:clickable="false"
            android:contentDescription="@string/article_list_item_imageButton_like"
            android:scaleType="centerInside"
            android:tint="?attr/charcoalGrey"
            app:srcCompat="@drawable/up" />

        <TextView
            android:id="@+id/article_list_item_textView_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5sp"
            android:layout_marginRight="5sp"
            android:text="100" />

        <ImageButton
            android:id="@+id/article_list_item_imageButton_dislike"
            android:layout_width="20sp"
            android:layout_height="20sp"
            android:adjustViewBounds="true"
            android:background="@drawable/botton_background"
            android:clickable="false"
            android:scaleType="centerInside"
            android:visibility="gone"
            app:srcCompat="@drawable/down" />

        <Space
            android:layout_width="20sp"
            android:layout_height="wrap_content" />

        <ImageButton
            android:id="@+id/article_list_imageButton_commit"
            android:layout_width="20sp"
            android:layout_height="20sp"
            android:adjustViewBounds="true"
            android:background="@drawable/botton_background"
            android:clickable="false"
            android:contentDescription="@string/article_list_imageButton_commit"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/commit" />

        <Space
            android:layout_width="8sp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/article_list_item_textView_commit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="100" />
    </LinearLayout>

</LinearLayout>