<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/black"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/hot_boards_fragment_appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/black"
        android:contentDescription="@string/search_bar"
        android:elevation="0dp"
        app:elevation="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/hot_boards_fragment_search"
                android:layout_width="0dp"
                android:layout_height="40sp"
                android:layout_margin="15sp"
                android:layout_weight="1"
                android:background="@drawable/search_bar_background"
                android:contentDescription="@string/search_bar"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/search_boards_fragment_imageView_search"
                    android:layout_width="25sp"
                    android:layout_height="25sp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="15sp"
                    android:contentDescription="@string/todo"
                    android:tint="?attr/blueGrey"
                    app:srcCompat="@drawable/ic_search_black_24dp" />
            </LinearLayout>

            <ImageButton
                android:id="@+id/hot_boards_fragment_edit"
                android:layout_width="35sp"
                android:layout_height="35sp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="15sp"
                android:background="?selectableItemBackgroundBorderless"
                android:contentDescription="@string/hot_boards_fragment_edit"
                android:padding="5sp"
                android:tint="?attr/slateGrey"
                app:srcCompat="@drawable/ic_mode_edit_black_24dp" />

        </LinearLayout>


    </com.google.android.material.appbar.AppBarLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/hot_boards_fragment_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/black">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/hot_boards_fragment_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</LinearLayout>